--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "travis-encrypt",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Encrypts data for use in your travis yml configuration file",
   "repository": {
     "type": "git",
@@ -25,7 +25,9 @@
     "q": "~0.9.5",
     "ursa": "~0.8.0",
     "request": "~2.21.0",
-    "optimist": "~0.5.2"
+    "optimist": "~0.5.2",
+    "color": "~0.4.4",
+    "colors": "~0.6.0-1"
   },
   "devDependencies": {
     "grunt": "0.4.0rc7",
