--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "travis-encrypt",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "description": "Encrypts data for use in your travis yml configuration file",
   "repository": {
     "type": "git",
@@ -27,7 +27,9 @@
     "request": "~2.21.0",
     "optimist": "~0.5.2",
     "color": "~0.4.4",
-    "colors": "~0.6.0-1"
+    "colors": "~0.6.0-1",
+    "github": "~0.1.10",
+    "lodash": "~1.3.1"
   },
   "devDependencies": {
     "grunt": "0.4.0rc7",
