--- a/package.json
+++ b/package.json
@@ -23,14 +23,12 @@
   "homepage": "https://github.com/pwmckenna/node-travis-encrypt",
   "bugs": "https://github.com/pwmckenna/node-travis-encrypt/issues",
   "dependencies": {
-    "q": "~0.9.5",
     "ursa": "~0.8.0",
-    "request": "~2.21.0",
     "optimist": "~0.5.2",
-    "color": "~0.4.4",
     "colors": "~0.6.0-1",
     "github": "~0.1.10",
-    "lodash": "~1.3.1"
+    "lodash": "~1.3.1",
+    "travis-ci": "~0.1.2"
   },
   "devDependencies": {
     "grunt": "0.4.0rc7",
