--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   "bugs": "https://github.com/pwmckenna/node-travis-encrypt/issues",
   "dependencies": {
     "ursa": "~0.8.0",
-    "optimist": "~0.5.2",
     "colors": "~0.6.0-1",
-    "travis-ci": "~1.0.0"
+    "travis-ci": "~1.0.0",
+    "yargs": "~1.2.2",
+    "split": "~0.3.0"
   },
   "devDependencies": {
     "grunt": "0.4.0rc7",
