--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   "bugs": "https://github.com/pwmckenna/node-travis-encrypt/issues",
   "dependencies": {
     "colors": "~0.6.0-1",
+    "deep-property": "^1.1.0",
+    "read-yaml": "^1.0.0",
     "split": "~0.3.0",
     "travis-ci": "^2.0.0",
     "ursa": "~0.8.0",
-    "yargs": "~1.2.2"
+    "write-yaml": "^0.1.2",
+    "yargs": "^1.3.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
