--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "deep-property": "^1.1.0",
     "read-yaml": "^1.0.0",
     "travis-ci": "^2.0.3",
-    "ursa": "~0.8.0",
+    "ursa": "^0.9.1",
     "write-yaml": "^0.1.2",
     "yargs": "^1.3.3"
   },
