--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "type": "git",
     "url": "git://github.com/pwmckenna/node-travis-encrypt.git"
   },
+  "scripts": {
+    "test": "istanbul cover tape tests/**/*.test.js"
+  },
   "keywords": [
-    "travis-pro",
+    ".travis.yml",
+    "encryption",
     "travis",
     "travis-ci",
-    "encryption",
-    ".travis.yml"
+    "travis-pro"
   ],
   "author": "Patrick Williams <pwmckenna@gmail.com>",
   "license": "BSD-3-Clause",
@@ -35,7 +38,10 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "0.1.1rc6",
     "grunt-release": "^0.7.0",
-    "matchdep": "~0.1.1"
+    "lodash.merge": "^3.3.2",
+    "matchdep": "~0.1.1",
+    "proxyquire": "^1.7.3",
+    "tape": "^4.2.2"
   },
   "engines": {
     "node": ">=0.8.0"
