--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "0.1.1rc6",
     "grunt-release": "^0.7.0",
+    "istanbul": "^0.4.0",
     "lodash.merge": "^3.3.2",
     "matchdep": "~0.1.1",
     "proxyquire": "^1.7.3",
