--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "istanbul cover tape tests/**/*.test.js",
-    "posttest": "eslint ."
+    "posttest": "semistandard"
   },
   "keywords": [
     ".travis.yml",
@@ -44,9 +44,9 @@
   },
   "devDependencies": {
     "concat-stream": "^1.5.1",
-    "eslint": "^1.10.3",
     "istanbul": "^0.4.0",
     "proxyquire": "^1.7.3",
+    "semistandard": "*",
     "tape": "^4.2.2"
   },
   "engines": {
